<resources>
    <string name="app_name">My Kennel Manager</string>
    <string name="my_pets">My Pets</string>
    <string name="vet_records">Vet Records</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="my_photos">My Photos</string>
    <string name="quick_record">Quick Record</string>
    <string name="show_points">Show Points</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>

</resources>